#14 fix data hidden by sidebar

--- a/movies/src/hoc/Layout/Layout.css
+++ b/movies/src/hoc/Layout/Layout.css
@@ -1,3 +1,11 @@
 .Children{
     margin-top: 56px;
 }
+
+@media (min-width: 600px) {
+    .Children{
+        margin-top: 64px;
+        padding-left: 240px;
+    }
+}
+
